fix: ui bugs on tablet mode

--- a/packages/bot-web-ui/src/components/run-panel/run-panel.scss
+++ b/packages/bot-web-ui/src/components/run-panel/run-panel.scss
@@ -161,6 +161,7 @@
 
         @include tablet-screen {
             max-width: 60rem;
+            padding: 0.8rem 0;
         }
     }
     &__stop-button,
