--- a/packages/bot-web-ui/src/pages/dashboard/load-bot-preview/index.scss
+++ b/packages/bot-web-ui/src/pages/dashboard/load-bot-preview/index.scss
@@ -277,7 +277,7 @@
 }
 
 .dc-dialog {
-    @include mobile {
+    @include mobile-or-tablet-screen {
         &__wrapper--preview {
             top: 6.5rem;
 
